[gd_scene load_steps=11 format=3 uid="uid://dpv6y1uobojoi"]

[ext_resource type="Script" uid="uid://pk25e52xflca" path="res://singeltons/options.gd" id="1_fp51t"]
[ext_resource type="Theme" uid="uid://bfso10g3u0yvr" path="res://themes/main_theme.tres" id="2_bakd6"]
[ext_resource type="PackedScene" uid="uid://dqonki5iro1an" path="res://singeltons/sound_slider.tscn" id="3_bakd6"]

[sub_resource type="Animation" id="Animation_42424"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-960, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackgroundRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bdjhu"]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-960, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackgroundRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.372549)]
}

[sub_resource type="Animation" id="Animation_ury5b"]
resource_name = "pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 540)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42424"]
_data = {
&"RESET": SubResource("Animation_42424"),
&"open": SubResource("Animation_bdjhu"),
&"pause": SubResource("Animation_ury5b")
}

[sub_resource type="Animation" id="Animation_vhu23"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 0)]
}

[sub_resource type="Animation" id="Animation_bakd6"]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -540), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhu23"]
_data = {
&"RESET": SubResource("Animation_vhu23"),
&"open": SubResource("Animation_bakd6")
}

[node name="Options" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_fp51t")

[node name="BackgroundRect" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_right = -960.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bakd6")

[node name="AnimationMain" type="AnimationPlayer" parent="Main"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_42424")
}
autoplay = "RESET"

[node name="Options" type="PanelContainer" parent="Main"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -134.0
offset_right = 150.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContent" type="VBoxContainer" parent="Main/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Main/Options/MainContent"]
layout_mode = 2
text = "- Menu -"
horizontal_alignment = 1
uppercase = true

[node name="Master" type="Label" parent="Main/Options/MainContent"]
layout_mode = 2
text = "Master"

[node name="SoundSlider" parent="Main/Options/MainContent" instance=ExtResource("3_bakd6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Master2" type="Label" parent="Main/Options/MainContent"]
layout_mode = 2
text = "SFX"

[node name="SoundSlider2" parent="Main/Options/MainContent" instance=ExtResource("3_bakd6")]
unique_name_in_owner = true
layout_mode = 2
bus_name = "SFX"

[node name="Master3" type="Label" parent="Main/Options/MainContent"]
layout_mode = 2
text = "Music"

[node name="SoundSlider3" parent="Main/Options/MainContent" instance=ExtResource("3_bakd6")]
unique_name_in_owner = true
layout_mode = 2
bus_name = "Music"

[node name="ButtonCredits" type="Button" parent="Main/Options/MainContent"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits
"

[node name="ReturnBtn" type="Button" parent="Main/Options/MainContent"]
unique_name_in_owner = true
layout_mode = 2
text = "Return to Game"

[node name="Credits" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bakd6")

[node name="AnimationCredits" type="AnimationPlayer" parent="Credits"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_vhu23")
}

[node name="CreditsContent" type="PanelContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -44.0
offset_right = 150.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/CreditsContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Credits Label" type="Label" parent="Credits/CreditsContent/VBoxContainer"]
layout_mode = 2
text = "- Credits -"
horizontal_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="Credits/CreditsContent/VBoxContainer"]
layout_mode = 2
text = "Song: eCommerce
Artist: BoxCat Games
Source: Free Music Archive
License type: (CC BY)"
horizontal_alignment = 1

[node name="CloseCreditsBtn" type="Button" parent="Credits/CreditsContent/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close Credits"

[connection signal="pressed" from="Main/Options/MainContent/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="Main/Options/MainContent/ReturnBtn" to="." method="_on_return_btn_pressed"]
[connection signal="pressed" from="Credits/CreditsContent/VBoxContainer/CloseCreditsBtn" to="." method="_on_close_credits_btn_pressed"]
